Fix alignment

--- a/css/components/header.css
+++ b/css/components/header.css
@@ -1,5 +1,6 @@
 header h1 {
   margin: 0 0 0 0;
+  text-align: right;
 }
 
 header nav ul {
